--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -1,4 +1,9 @@
 set(DIR ${CMAKE_CURRENT_LIST_DIR})
 target_sources(swar
   PRIVATE
+  "${DIR}/highbot.cpp"
+  "${DIR}/highbot.h"
+  "${DIR}/lowbot.cpp"
+  "${DIR}/lowbot.h"
+  "${DIR}/viewer.h"
 )
