Added scorerecorder and random bot

--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -5,5 +5,9 @@ target_sources(swar
   "${DIR}/highbot.h"
   "${DIR}/lowbot.cpp"
   "${DIR}/lowbot.h"
+  "${DIR}/randombot.cpp"
+  "${DIR}/randombot.h"
+  "${DIR}/scorerecorder.h"
+  "${DIR}/scorerecorder.cpp"
   "${DIR}/viewer.h"
 )
