Creating dueling bot

--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(DIR ${CMAKE_CURRENT_LIST_DIR})
 target_sources(swar
   PRIVATE
+  "${DIR}/duelist.cpp"
+  "${DIR}/duelist.h"
   "${DIR}/highbot.cpp"
   "${DIR}/highbot.h"
   "${DIR}/lowbot.cpp"
