Improved driver output and created high class bot

--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -5,6 +5,8 @@ target_sources(swar
   "${DIR}/duelist.h"
   "${DIR}/highbot.cpp"
   "${DIR}/highbot.h"
+  "${DIR}/highclass.cpp"
+  "${DIR}/highclass.h"
   "${DIR}/lowbot.cpp"
   "${DIR}/lowbot.h"
   "${DIR}/randombot.cpp"
